--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ body {
   overflow-x: hidden;
   font-family: 'Open Sans', sans-serif;
   color: var(--white);
-  background-color: var(--orange);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d23d09' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url(./img/Papers.co-so43-blur-gradation-dark-blue-android-medium.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
   
 .header {
@@ -114,12 +120,15 @@ body {
   display: block;
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
   width: 26px;
   height: 26px;
   background-image: url(./img/search_black_48dp.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 26px;
   background-size: cover;
-  opacity: .5;
+  opacity: .3;
 }
   
 .search-input {
@@ -127,7 +136,7 @@ body {
   width: 100%;
   height: 45px;
   padding: 15px;
-  padding-right: 37.5px;
+  padding-left: 40px;
   font-weight: 500;
   font-size: 16px;
   color: var(--grey);
@@ -149,18 +158,19 @@ body {
   display: block;
   position: absolute;
   top: 8px;
-  right: 10px;
+  left: 10px;
   width: 30px;
   height: 30px;
   background-image: url(./img/expand_more_black_48dp.svg);
   background-size: cover;
-  opacity: .5;
+  opacity: .3;
 }
   
 .sorting-select {
   width: 100%;
   height: 45px;
-  padding: 0 15px;
+  padding: 15px;
+  padding-left: 40px;
   font-weight: 500;
   font-size: 16px;
   color: var(--grey);
